<resources>
    <string name="app_name">Family Planner</string>

    <string name="minimum_password">you\'re password should be atleast 6 chars long</string>
    <string name="auth_failed">failed to sign in</string>
    <string name="FamilyPlanner">FamilyPlanner</string>
    <string name="signIn">Sign in</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="forgotPass">Forgint Password ?</string>
    <string name="Register">Register</string>
    <string name="fullName">Full name</string>
    <string name="conemail">confilm Email</string>
    <string name="conpass">confirm Password</string>
    <string name="ResetPassword">reset Password</string>
    <string name="menu_monthplanner">Month Planner</string>
    <string name="menu_weekplanner">Week Planner</string>
    <string name="goToDay">Day Planner</string>
    <string name="menu_dayplanner">Day Planner</string>
    <string name="menu_shoppinglistplanner">Shopping List</string>
    <string name="family">Family</string>
    <string name="logout">Log Out</string>
    <string name="selectADate">Select A Date</string>
    <string name="addTask">Add Task</string>
    <string name="deleteTask">Delete Task</string>
    <string name="DeleteAllTask">Delete All Tasks</string>
    <string name="goToWeek">Go To Week</string>
    <string name="taskTitle">Task Title</string>
    <string name="taskDescription">Task Description</string>
    <string name="date">Date</string>
    <string name="startTime">Start Time</string>
    <string name="time">12:00</string>
    <string name="endTime">End Time</string>
    <string name="dbnode_users">users</string>
    <string name="dbnode_tasks">tasks</string>
    <string name="field_user_id">user_id</string>
    <string name="UpdateTask">Update Task</string>
    <string name="to"><![CDATA[->]]></string>
    <string name="Edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="_0_0">0:0</string>
    <string name="_01_00">01:00</string>
    <string name="_02_00">02:00</string>
    <string name="_03_00">03:00</string>
    <string name="_04_00">04:00</string>
    <string name="_05_00">05:00</string>
    <string name="_06_00">06:00</string>
    <string name="_00_00">00:00</string>
    <string name="_07_00">07:00</string>
    <string name="_23_00">23:00</string>
    <string name="_22_00">22:00</string>
    <string name="_21_00">21:00</string>
    <string name="_20_00">20:00</string>
    <string name="_19_00">19:00</string>
    <string name="_17_00">17:00</string>
    <string name="_16_00">16:00</string>
    <string name="_15_00">15:00</string>
    <string name="_14_00">14:00</string>
    <string name="_13_00">13:00</string>
    <string name="_12_00">12:00</string>
    <string name="_11_00">11:00</string>
    <string name="_10_00">10:00</string>
    <string name="_09_00">09:00</string>
    <string name="_08_00">08:00</string>
    <string name="_18_00">18:00</string>
    <string name="dbnode_dates">dates</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fry">Fry</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="age">Age</string>
    <string name="birthDay">birthDay</string>
    <string name="Save">Save</string>
    <string name="selectADaters">ds,nhqmklnhdmqlkdshf</string>
    <string name="WeekView">WeekView</string>
    <string name="familyName">Family Name</string>
    <string name="familyId">Family ID</string>
    <string name="familycode">Family Code</string>
    <string name="JoinFamily">Wan\'t to join a Family by a family code?</string>
    <string name="LeaveFamily">Want to leave your current family?</string>
    <string name="cretaFamily">Isn\'t your family created yet?</string>
    <string name="JoinFam">Join Family</string>
    <string name="Leave">Leave Family</string>
    <string name="CreateFam">Create Family</string>
    <string name="checkCode">Check Code</string>
    <string name="members">Members</string>
    <string name="addList">Add ShoppingList</string>
    <string name="shopName">shopName</string>
    <string name="Needed">Needed Items</string>
</resources>