<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".family.FamilyActivity"
    android:background="@color/darkGray">


<com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/gradient"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/FamilyPlanner"
                android:textColor="@android:color/white"
                android:textSize="40sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/FamilyNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/familyName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/FamilyIdLabel"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/familycode"
        app:layout_constraintStart_toStartOf="@+id/FamilyNameTV"
        app:layout_constraintTop_toBottomOf="@+id/FamilyNameTV" />

    <TextView
        android:id="@+id/FamilyIdTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/FamilyIdLabel"
        app:layout_constraintTop_toBottomOf="@+id/FamilyIdLabel" />

    <Button
        android:id="@+id/JoinFamilyBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:layout_marginEnd="32dp"
        android:background="@drawable/listboxgradient"
        android:text="@string/JoinFam"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/JoinFamilyLabel"
        app:layout_constraintTop_toBottomOf="@+id/JoinFamilyLabel" />

    <Button
        android:id="@+id/LeaveFamilyBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/listboxgradient"
        android:text="@string/Leave"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/JoinFamilyBTN"
        app:layout_constraintStart_toStartOf="@+id/JoinFamilyBTN"
        app:layout_constraintTop_toBottomOf="@+id/LeaveFamilyLabel" />

    <TextView
        android:id="@+id/JoinFamilyLabel"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/JoinFamily"
        app:layout_constraintStart_toStartOf="@+id/FamilyIdTV"
        app:layout_constraintTop_toBottomOf="@+id/FamilyIdTV" />

    <TextView
        android:id="@+id/LeaveFamilyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="32dp"
        android:text="@string/LeaveFamily"
        app:layout_constraintStart_toStartOf="@+id/JoinFamilyBTN"
        app:layout_constraintTop_toBottomOf="@+id/JoinFamilyBTN" />

    <TextView
        android:id="@+id/CreateFamilyLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/cretaFamily"
        app:layout_constraintStart_toStartOf="@+id/LeaveFamilyBTN"
        app:layout_constraintTop_toBottomOf="@+id/LeaveFamilyBTN" />

    <Button
        android:id="@+id/CreateFamilyBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/listboxgradient"
        android:text="@string/CreateFam"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/LeaveFamilyBTN"
        app:layout_constraintStart_toStartOf="@+id/LeaveFamilyBTN"
        app:layout_constraintTop_toBottomOf="@+id/CreateFamilyLable" />

    <TextView
        android:id="@+id/FamilyNameTV"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/FamilyNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/FamilyNameLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>